fix(textfield): fix jump text with prefix

--- a/src/components/TextField/textfield.scss
+++ b/src/components/TextField/textfield.scss
@@ -55,12 +55,12 @@
       border: solid 0.1rem $light;
 
       &:hover {
-        border: 0.1rem solid $sb-green;
+        border-color: $sb-green;
       }
 
       &:focus {
         border-radius: 0.5rem;
-        border: 0.1rem solid $sb-green;
+        border-color: $sb-green;
         box-shadow: 0rem 0rem 0rem 0.3rem $sb-green-25;
         outline: none;
       }
@@ -77,13 +77,11 @@
     }
 
     &--with-prefix {
-      border-left: none;
       border-top-left-radius: 0rem!important;
       border-bottom-left-radius: 0rem!important;
     }
 
     &--with-suffix {
-      border-right: none;
       border-top-right-radius: 0rem!important;
       border-bottom-right-radius: 0rem!important;
     }
@@ -125,11 +123,13 @@
   }
 
   &__prefix {
+    border-left: none;
     border-top-left-radius: 0rem;
     border-bottom-left-radius: 0rem;
   }
 
   &__suffix {
+    border-right: none;
     border-top-right-radius: 0rem;
     border-bottom-right-radius: 0rem;
   }
